--- a/1.11/build.gradle
+++ b/1.11/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url = "https://maven.minecraftforge.net" }
+        mavenCentral()
         maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
@@ -23,7 +23,7 @@ apply plugin: 'com.matthewprenger.cursegradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-ext.priv = parseConfig(file('../1.10.2/private.properties'))
+// ext.priv = parseConfig(file('../1.10.2/private.properties'))
 ext.version_config = parseConfig(file('../1.10.2/version.properties'))
 
 version = ext.version_config.version_no
@@ -152,15 +152,15 @@ sourceSets {
 
 
 
-curseforge {
-    apiKey = priv.cfkey
-    project {
-        id = "225561"
-        changelog = file('../1.10.2/src/changelog.txt')
-        releaseType = "release"
-        addGameVersion "1.11.2"
-        mainArtifact (jar) {
-            displayName = "Extra Utilities 2 - 1.11.2 - ${version_config.version_no}"
-        }
-    }
-}
+// curseforge {
+//     apiKey = priv.cfkey
+//     project {
+//         id = "225561"
+//         changelog = file('../1.10.2/src/changelog.txt')
+//         releaseType = "release"
+//         addGameVersion "1.11.2"
+//         mainArtifact (jar) {
+//             displayName = "Extra Utilities 2 - 1.11.2 - ${version_config.version_no}"
+//         }
+//     }
+// }
