--- a/1.12/build.gradle
+++ b/1.12/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         maven { url = "https://maven.minecraftforge.net" }
         mavenCentral()
-}
+    }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
@@ -39,7 +39,7 @@ minecraft {
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     //mappings channel: 'snapshot', version: '20171003-1.12'
-    mappings channel: 'snapshot', version: '20171003-1.12'
+    mappings channel: 'snapshot', version: '20170624-1.12'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     accessTransformer = file('src/main/resources/META-INF/extrautils2_at.cfg')
@@ -68,6 +68,31 @@ minecraft {
     }
 }
 
+repositories {
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
+}
+
+repositories {
+    maven {
+        name = "thiakil"
+        url = "https://maven.thiakil.com"
+    }
+    maven {
+        url "https://dvs1.progwml6.com/files/maven"
+    }
+    maven {
+        url "https://maven.blamejared.com"
+    }
+    maven {
+        url "https://mod-buildcraft.com/maven"
+    }
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -88,7 +113,14 @@ dependencies {
     // These dependencies get remapped to your current MCP mappings
     // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
+    implementation fg.deobf("curse.maven:enderio-64578:2435810")
+    implementation fg.deobf(group: "com.mod-buildcraft", name: "buildcraft", version: "7.99.14")
+    // implementation fg.deobf(group: "com.mod-buildcraft", name: "buildcraft-api", version: "7.99.24.8")
+    // implementation fg.deobf("curse.maven:buildcraft-61811:3204475")
+    // implementation fg.deobf("curse.maven:crafttweaker-239197:2576160")
     implementation fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
+    implementation fg.deobf("CraftTweaker2:ZenScript:4.1.9.6")
+    // implementation fg.deobf(group: "com.blamejared.crafttweaker", name: "CraftTweaker-1.12.2", version: "4.1.20.671")
     implementation fg.deobf("mezz.jei:jei_1.12.2:4.12.1.217")
     implementation fg.deobf("slimeknights.mantle:Mantle:1.12-1.3.1.22")
     implementation fg.deobf("slimeknights:TConstruct:1.12-2.7.2.508")
@@ -99,28 +131,6 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
 }
-
-repositories {
-    maven {
-        name = "thiakil"
-        url = "https://maven.thiakil.com"
-    }
-    maven {
-        url "https://dvs1.progwml6.com/files/maven"
-    }
-    maven {
-        url "https://maven.blamejared.com"
-    }
-}
-// repositories {
-//     maven {
-//         url 'https://www.cursemaven.com'
-//         // FG4: It's recommended to uncomment the following block
-//         // content {
-//         //     includeGroup "curse.maven"
-//         // }
-//     }
-// }
 
 // dependencies {
 //     implementation fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
@@ -141,24 +151,26 @@ repositories {
 // }
 
 
-// processResources {
-//     // this will ensure that this task is redone when the versions change.
-//     inputs.property "version", project.version
-//     inputs.property "mcversion", project.minecraft.version
+processResources {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    // this will ensure that this task is redone when the versions change.
+    // inputs.property "version", project.version
+    // inputs.property "mcversion", project.minecraft.version
 
-//     // replace stuff in mcmod.info, nothing else
-//     from(sourceSets.main.resources.srcDirs) {
-//         include 'mcmod.info'
+    // replace stuff in mcmod.info, nothing else
+    // from(sourceSets.main.resources.srcDirs) {
+    //     include 'mcmod.info'
                 
-//         // replace version and mcversion
-//         expand 'version':project.version, 'mcversion':project.minecraft.version
-//     }
+    //     // replace version and mcversion
+    //     // expand 'version':project.version, 'mcversion':project.minecraft.version
+    // }
         
-//     // copy everything else except the mcmod.info
-//     from(sourceSets.main.resources.srcDirs) {
-//         exclude 'mcmod.info'
-//     }
-// }
+    // // copy everything else except the mcmod.info
+    // from(sourceSets.main.resources.srcDirs) {
+    //     exclude 'mcmod.info'
+    //     exclude 'pack.mcmeta'
+    // }
+}
 
 
 jar {
