--- a/1.12/build.gradle
+++ b/1.12/build.gradle
@@ -115,12 +115,8 @@ dependencies {
 
     implementation fg.deobf("curse.maven:enderio-64578:2435810")
     implementation fg.deobf(group: "com.mod-buildcraft", name: "buildcraft", version: "7.99.14")
-    // implementation fg.deobf(group: "com.mod-buildcraft", name: "buildcraft-api", version: "7.99.24.8")
-    // implementation fg.deobf("curse.maven:buildcraft-61811:3204475")
-    // implementation fg.deobf("curse.maven:crafttweaker-239197:2576160")
     implementation fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
     implementation fg.deobf("CraftTweaker2:ZenScript:4.1.9.6")
-    // implementation fg.deobf(group: "com.blamejared.crafttweaker", name: "CraftTweaker-1.12.2", version: "4.1.20.671")
     implementation fg.deobf("mezz.jei:jei_1.12.2:4.12.1.217")
     implementation fg.deobf("slimeknights.mantle:Mantle:1.12-1.3.1.22")
     implementation fg.deobf("slimeknights:TConstruct:1.12-2.7.2.508")
@@ -132,44 +128,15 @@ dependencies {
 
 }
 
-// dependencies {
-//     implementation fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
-//     // compileOnly fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
-//     // runtimeOnly fg.deobf("CraftTweaker2:CraftTweaker2-API:4.1.9.6")
-//     implementation fg.deobf("mezz.jei:jei_1.12.2:4.12.1.217")
-//     // compileOnly fg.deobf("mezz.jei:jei_1.12.2:4.12.1.217")
-//     // runtimeOnly fg.deobf("mezz.jei:jei_1.12.2:4.12.1.217")
-//     implementation fg.deobf("slimeknights.mantle:Mantle:1.12-1.3.1.22")
-//     // compileOnly fg.deobf("slimeknights.mantle:Mantle:1.12-1.3.1.22")
-//     // runtimeOnly fg.deobf("slimeknights.mantle:Mantle:1.12-1.3.1.22")
-//     implementation fg.deobf("slimeknights:TConstruct:1.12-2.7.2.508")
-//     // compileOnly fg.deobf("slimeknights:TConstruct:1.12-2.7.2.508")
-//     // runtimeOnly fg.deobf("slimeknights:TConstruct:1.12-2.7.2.508")
-//     implementation fg.deobf("com.azanor.baubles:Baubles:1.12-1.5.2")
-//     // compileOnly fg.deobf("com.azanor.baubles:Baubles:1.12-1.5.2")
-//     // runtimeOnly fg.deobf("com.azanor.baubles:Baubles:1.12-1.5.2")
-// }
-
-
 processResources {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    duplicatesStrategy = DuplicatesStrategy.FAIL
     // this will ensure that this task is redone when the versions change.
     // inputs.property "version", project.version
     // inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
-    // from(sourceSets.main.resources.srcDirs) {
-    //     include 'mcmod.info'
-                
-    //     // replace version and mcversion
-    //     // expand 'version':project.version, 'mcversion':project.minecraft.version
-    // }
-        
-    // // copy everything else except the mcmod.info
-    // from(sourceSets.main.resources.srcDirs) {
-    //     exclude 'mcmod.info'
-    //     exclude 'pack.mcmeta'
-    // }
+    filesMatching("META-INF/mcmod.info") {
+        expand 'version':project.version, 'mcversion':"1.12"
+    }
 }
 
 
@@ -207,30 +174,6 @@ publishing {
     }
 }
 
-// // Create deobf dev jars
-// task deobfJar(type: Jar) {
-//     from sourceSets.main.output
-//     classifier = 'deobf'
-//     manifest {
-//         attributes "FMLAT": "extrautils2_at.cfg"
-// //        attributes "FMLCorePlugin": "com.rwtema.extrautils2.asm.CoreXU2"
-// //        attributes "FMLCorePluginContainsFMLMod": "true"
-//     }
-// }
-
-// task sourcesJar(type: Jar) {
-//     from sourceSets.main.allJava
-//     classifier = 'sources'
-//     manifest {
-//         attributes "FMLAT": "extrautils2_at.cfg"
-//     }
-// }
-
-// artifacts {
-//     archives deobfJar
-//     archives sourcesJar
-// }
-
 sourceSets {
     main {
         java {
@@ -248,19 +191,3 @@ sourceSets {
     }
 
 }
-
-
-// curseforge {
-//     apiKey = priv.cfkey
-//     project {
-//         id = "225561"
-//         changelog = file('../1.10.2/src/changelog.txt')
-//         releaseType = "release"
-//         addGameVersion "1.12"
-//         addGameVersion "1.12.1"
-//         addGameVersion "1.12.2"
-//         mainArtifact (jar) {
-//             displayName = "Extra Utilities 2 - 1.12 - ${version_config.version_no}"
-//         }
-//     }
-// }
