--- a/1.12/build.gradle
+++ b/1.12/build.gradle
@@ -134,7 +134,7 @@ processResources {
     // inputs.property "version", project.version
     // inputs.property "mcversion", project.minecraft.version
 
-    filesMatching("META-INF/mcmod.info") {
+    filesMatching("mcmod.info") {
         expand 'version':project.version, 'mcversion':"1.12"
     }
 }
